src/test/ui/issues/issue-4972.stderr
error[E0033]: type `std::boxed::Box<(dyn MyTrait + 'static)>` cannot be dereferenced
  --> $DIR/issue-4972.rs:24:25
   |
LL |         TraitWrapper::A(box ref map) => map, //~ ERROR cannot be dereferenced
   |                         ^^^^^^^^^^^ type `std::boxed::Box<(dyn MyTrait + 'static)>` cannot be dereferenced

error: aborting due to previous error

For more information about this error, try `rustc --explain E0033`.
